<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieFragment"
        android:checked="true"
        android:icon="@drawable/ic_movie"
        android:title="Movie" />
    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_tv"
        android:title="Tv Show" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="Favorite" />
</menu>