<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <string name="title_activity_detail_tvshow">Detail Tv Show</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Movie</string>
    <string name="bookmark">TvShow</string>
    <string name="tagline">Tagline</string>
    <string name="description">Description</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorited">%1s added to favorited</string>
    <string name="unfavorited">%1s removed from favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV SHOW</string>
    <string name="undo">Undo</string>
    <string name="ok">OK</string>
</resources>